--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ng2-start",
-  "version": "0.0.0",
+  "name": "pwa-store",
+  "version": "0.1.0",
   "private": true,
-  "author": "Felix Itzenplitz",
+  "author": "Shidhin C R",
   "license": "MIT",
   "scripts": {
     "start": "npm run serve",
@@ -22,28 +22,29 @@
     "sync": "cp -r config webpack.config.js package.json"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "@angular2-material/button": "^2.0.0-alpha.5-2",
-    "@angular2-material/card": "^2.0.0-alpha.5-2",
-    "@angular2-material/checkbox": "^2.0.0-alpha.5-2",
-    "@angular2-material/core": "^2.0.0-alpha.5-2",
-    "@angular2-material/grid-list": "^2.0.0-alpha.5-2",
-    "@angular2-material/icon": "^2.0.0-alpha.5-2",
-    "@angular2-material/input": "^2.0.0-alpha.5-2",
-    "@angular2-material/list": "^2.0.0-alpha.5-2",
-    "@angular2-material/progress-bar": "^2.0.0-alpha.5-2",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.5-2",
-    "@angular2-material/radio": "^2.0.0-alpha.5-2",
-    "@angular2-material/sidenav": "^2.0.0-alpha.5-2",
-    "@angular2-material/slide-toggle": "^2.0.0-alpha.5-2",
-    "@angular2-material/tabs": "^2.0.0-alpha.5-2",
-    "@angular2-material/toolbar": "^2.0.0-alpha.5-2",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "^0.1.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-alpha.8",
+    "@angular2-material/button": "^2.0.0-alpha.6",
+    "@angular2-material/card": "^2.0.0-alpha.6",
+    "@angular2-material/checkbox": "^2.0.0-alpha.6",
+    "@angular2-material/core": "^2.0.0-alpha.6",
+    "@angular2-material/grid-list": "^2.0.0-alpha.6",
+    "@angular2-material/icon": "^2.0.0-alpha.6",
+    "@angular2-material/input": "^2.0.0-alpha.6",
+    "@angular2-material/list": "^2.0.0-alpha.6",
+    "@angular2-material/progress-bar": "^2.0.0-alpha.6",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.6",
+    "@angular2-material/radio": "^2.0.0-alpha.6",
+    "@angular2-material/sidenav": "^2.0.0-alpha.6",
+    "@angular2-material/slide-toggle": "^2.0.0-alpha.6",
+    "@angular2-material/tabs": "^2.0.0-alpha.6",
+    "@angular2-material/toolbar": "^2.0.0-alpha.6",
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
