--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
+    "serviceworker-webpack-plugin": "^0.1.3",
     "ts-loader": "^0.8.2",
     "tslint": "^3.10.2",
     "typescript": "^1.8.10",
